--- a/world/templates/create_province.html
+++ b/world/templates/create_province.html
@@ -1,35 +1,42 @@
 {% extends "base.html" %}
 
 {% block world %}
-	<br>
 	- <a href="{% url 'country' %}">Country</a> <br>
 	- <a href="{% url 'province' %}">Province</a> <br>
+<!--
 	- <a href="{% url 'region' %}">Region</a> <br>
+	<br>
+-->
 	<br>
 {% endblock %}
 
 {% block mainframe %}
 <div>
-	<center>
+	
+	{% if form_url == "create" %}
 		<h2>Create a new province</h2>
-	</center>
-	<form action="" method="post">{% csrf_token %}
-		<table>
-		{% for field in province_form %}
-			<tr>
-				<td>{{field.label}}</td> <td> {{field}} </td> <td> {{field.errors}}</td>
-			</tr> 
-		{% endfor %}	
-			<tr>
-				<td></td>
-				{% if form_url == "create" %}
-				<td style="float: right;"><input type="submit" formaction="{% url 'create_province' %}" value="add province" /></td>
-				{% elif form_url == "edit" %}
-				<td style="float: right;"><input type="submit" formaction="{% url 'edit_province' province_id %}" value="save" /></td>
-				{% endif %}
-			</tr>
-		</table>
-	</form>
+	{% elif form_url == "edit" %}
+		<h2>Edit province</h2>
+	{% endif %}
+	
+		<form action="" method="post">{% csrf_token %}
+			<table>
+			{% for field in province_form %}
+				<tr>
+					<td>{{field.label}}</td> <td> {{field}} </td> <td> {{field.errors}}</td>
+				</tr> 
+			{% endfor %}	
+				<tr>
+					<td></td>
+					{% if form_url == "create" %}
+						<td style="float: right;"><input type="submit" formaction="{% url 'create_province' %}" value="add province" /></td>
+					{% elif form_url == "edit" %}
+						<td style="float: right;"><input type="submit" formaction="{% url 'edit_province' province_id %}" value="save" /></td>
+					{% endif %}
+				</tr>
+			</table>
+		</form>
+	
 </div>
 {% endblock %}
 
